--- a/plugin.xml
+++ b/plugin.xml
@@ -41,4 +41,14 @@
         <source-file src="src/ios/Connection.m"  />
     </platform>
 
+   <!-- windows8 -->
+    <platform name="windows8">
+        <js-module src="src/windows8/Connection.js" name="Connection">
+            <merges target="" />
+        </js-module>           
+        <js-module src="src/windows8/SocketProxy.js" name="SocketProxy">
+            <merges target="" />
+        </js-module>
+    </platform>    
+
 </plugin>
