--- a/plugin.xml
+++ b/plugin.xml
@@ -42,7 +42,10 @@
     </platform>
 
    <!-- windows8 -->
-    <platform name="windows8">          
+    <platform name="windows8">
+        <js-module src="src/windows8/Connection.js" name="Connection">
+            <merges target="" />
+        </js-module>          
         <js-module src="src/windows8/SocketProxy.js" name="SocketProxy">
             <merges target="" />
         </js-module>
